Update gradle and project to java11